<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Number"
        android:textSize="15pt"
        android:gravity="left"/>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_below="@+id/edit"
        android:layout_marginTop="9dp"
        android:background="@drawable/button"
        android:text="@string/button1"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button1"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3"
        android:background="@drawable/button"
        android:text="@string/button2"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:text="@string/button3"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toLeftOf="@+id/button2"
        android:background="@drawable/button"
        android:text="@string/button4"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:background="@drawable/button"
        android:text="@string/button5"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_below="@+id/button3"
        android:background="@drawable/button"
        android:text="@string/button6"
        android:textSize="10pt" />

    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_toLeftOf="@+id/button2"
        android:background="@drawable/button"
        android:text="@string/button7"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/button8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_below="@+id/button5"
        android:background="@drawable/button"
        android:text="@string/button8"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/button9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_below="@+id/button6"
        android:background="@drawable/button"
        android:text="@string/button9"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/buttonAdd"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button1"
        android:layout_toEndOf="@+id/button3"
        android:layout_toRightOf="@id/button3"
        android:background="@drawable/button"
        android:lineSpacingExtra="30sp"
        android:text="@string/buttonAdd"
        android:textSize="35dp" />

    <Button
        android:id="@+id/buttonSub"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toEndOf="@+id/button3"
        android:layout_toRightOf="@id/button3"
        android:background="@drawable/button"
        android:text="@string/buttonSub"
        android:textSize="35dp" />

    <Button
        android:id="@+id/buttonMul"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_toEndOf="@+id/button3"
        android:layout_toRightOf="@id/button3"
        android:background="@drawable/button"
        android:text="@string/buttonMul"
        android:textSize="35dp" />

    <Button
        android:id="@+id/button10"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_toLeftOf="@+id/button2"
        android:background="@drawable/button"
        android:text="@string/buttonDec"
        android:textSize="10pt"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/button0"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignStart="@+id/button8"
        android:layout_below="@+id/button8"
        android:background="@drawable/button"
        android:text="@string/button0"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/buttonCLR"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignStart="@+id/button9"
        android:layout_below="@+id/button9"
        android:background="@drawable/button"
        android:text="@string/buttonClr"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/buttonDiv"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_toEndOf="@+id/button3"
        android:layout_toRightOf="@id/button3"
        android:background="@drawable/button"
        android:text="@string/buttonDiv"
        android:textSize="35dp" />

    <Button
        android:id="@+id/buttonEql"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/buttonAdd"
        android:layout_alignRight="@id/button1"
        android:layout_below="@+id/button10"
        android:background="@drawable/button"
        android:text="@string/buttonEql"
        android:textSize="35dp" />



</RelativeLayout>